{
    "name": "Player",
    "maps": [
        {
            "name": "AttackPlayer",
            "id": "b420d0f3-87ff-45d5-ba33-cbba17515fff",
            "actions": [
                {
                    "name": "DirectionAttackUp",
                    "type": "Button",
                    "id": "c0c48c11-6fbd-4934-8e02-783a273a4036",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DirectionAttackDown",
                    "type": "Button",
                    "id": "54e55067-7723-4b8f-a75e-667fb4850f0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DirectionAttackLeft",
                    "type": "Button",
                    "id": "bd7ad9ea-c72e-4419-a79e-77cf52967b02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DirectionAttackRight",
                    "type": "Button",
                    "id": "e3438be9-5885-4595-b3f7-58970b395540",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "c3face33-294d-488f-a2ef-b68fc8d1cdae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10849db2-3cbd-4183-ac1a-7b2dc3c88406",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f516e8c1-bccb-43d4-9821-518458bd85d4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3730c11e-cf66-4f9c-a2f7-50bb38e95e95",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d4d676e-a0d6-48d5-a280-40255118bb4a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2307ae4-a076-46e6-964a-af9c912a6467",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7427b3ba-6fbe-43d6-8c1c-a766da97f077",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fe5042d-0edd-4010-a785-bd063a550a00",
                    "path": "<Keyboard>/d",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4c17807-c30c-4921-bc6a-b8c9930c551c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "DirectionAttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49197421-69b3-4d18-b6f1-20bda898fdb2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": []
        }
    ]
}